・工数別比率、工数、工期の計算をAPI側に移動 ・工程別FPの計算と表示を追加
