# src/api/openapi/openapi.yml
@@ -24,6 +24,8 @@ paths:
                   type: string
                 autoProductivity:
                   type: boolean
+                autoProcessRatios:
+                  type: boolean
                 productivityFPPerMonth:
                   type: number
                 projectType:
@@ -95,6 +97,19 @@ paths:
                         fpValue:
                           type: number
                   processRatios:
+                    type: object
+                    properties:
+                      basicDesign:
+                        type: number
+                      detailedDesign:
+                        type: number
+                      implementation:
+                        type: number
+                      integrationTest:
+                        type: number
+                      systemTest:
+                        type: number
+                  processFPs:
                     type: object
                     properties:
                       basicDesign:
